// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ElasticAgentCard props button 1`] = `
<RedirectAppLinks
  application={
    Object {
      "capabilities": Object {
        "navLinks": Object {
          "integrations": true,
        },
      },
    }
  }
>
  <EuiCard
    description="Use Elastic Agent for a simple, unified way to collect data from your machines."
    footer={
      <EuiButton
        color="primary"
        fill={true}
        size="m"
      >
        Button
      </EuiButton>
    }
    href="/app/integrations/browse"
    image={
      <EuiImage
        alt=""
        size="fullWidth"
        style={
          Object {
            "background": "aliceblue",
            "height": 240,
            "objectFit": "cover",
            "width": "max(100%, 360px)",
          }
        }
        url="/plugins/kibanaReact/assets/elastic_agent_card.svg"
      />
    }
    paddingSize="l"
    title={
      <EuiScreenReaderOnly>
        <span>
          Add Elastic Agent
        </span>
      </EuiScreenReaderOnly>
    }
  />
</RedirectAppLinks>
`;

exports[`ElasticAgentCard props category 1`] = `
<RedirectAppLinks
  application={
    Object {
      "capabilities": Object {
        "navLinks": Object {
          "integrations": true,
        },
      },
    }
  }
>
  <EuiCard
    description="Use Elastic Agent for a simple, unified way to collect data from your machines."
    footer={
      <EuiButton
        color="primary"
        fill={true}
        size="m"
      >
        Add Elastic Agent
      </EuiButton>
    }
    href="/app/integrations/browse/custom"
    image={
      <EuiImage
        alt=""
        size="fullWidth"
        style={
          Object {
            "background": "aliceblue",
            "height": 240,
            "objectFit": "cover",
            "width": "max(100%, 360px)",
          }
        }
        url="/plugins/kibanaReact/assets/elastic_agent_card.svg"
      />
    }
    paddingSize="l"
    title={
      <EuiScreenReaderOnly>
        <span>
          Add Elastic Agent
        </span>
      </EuiScreenReaderOnly>
    }
  />
</RedirectAppLinks>
`;

exports[`ElasticAgentCard props href 1`] = `
<RedirectAppLinks
  application={
    Object {
      "capabilities": Object {
        "navLinks": Object {
          "integrations": true,
        },
      },
    }
  }
>
  <EuiCard
    description="Use Elastic Agent for a simple, unified way to collect data from your machines."
    footer={
      <EuiButton
        color="primary"
        fill={true}
        size="m"
      >
        Button
      </EuiButton>
    }
    href="#"
    image={
      <EuiImage
        alt=""
        size="fullWidth"
        style={
          Object {
            "background": "aliceblue",
            "height": 240,
            "objectFit": "cover",
            "width": "max(100%, 360px)",
          }
        }
        url="/plugins/kibanaReact/assets/elastic_agent_card.svg"
      />
    }
    paddingSize="l"
    title={
      <EuiScreenReaderOnly>
        <span>
          Add Elastic Agent
        </span>
      </EuiScreenReaderOnly>
    }
  />
</RedirectAppLinks>
`;

exports[`ElasticAgentCard props recommended 1`] = `
<RedirectAppLinks
  application={
    Object {
      "capabilities": Object {
        "navLinks": Object {
          "integrations": true,
        },
      },
    }
  }
>
  <EuiCard
    betaBadgeProps={
      Object {
        "label": "Recommended",
      }
    }
    description="Use Elastic Agent for a simple, unified way to collect data from your machines."
    footer={
      <EuiButton
        color="primary"
        fill={true}
        size="m"
      >
        Add Elastic Agent
      </EuiButton>
    }
    href="/app/integrations/browse"
    image={
      <EuiImage
        alt=""
        size="fullWidth"
        style={
          Object {
            "background": "aliceblue",
            "height": 240,
            "objectFit": "cover",
            "width": "max(100%, 360px)",
          }
        }
        url="/plugins/kibanaReact/assets/elastic_agent_card.svg"
      />
    }
    paddingSize="l"
    title={
      <EuiScreenReaderOnly>
        <span>
          Add Elastic Agent
        </span>
      </EuiScreenReaderOnly>
    }
  />
</RedirectAppLinks>
`;

exports[`ElasticAgentCard renders 1`] = `
<RedirectAppLinks
  application={
    Object {
      "capabilities": Object {
        "navLinks": Object {
          "integrations": true,
        },
      },
    }
  }
>
  <EuiCard
    description="Use Elastic Agent for a simple, unified way to collect data from your machines."
    footer={
      <EuiButton
        color="primary"
        fill={true}
        size="m"
      >
        Add Elastic Agent
      </EuiButton>
    }
    href="/app/integrations/browse"
    image={
      <EuiImage
        alt=""
        size="fullWidth"
        style={
          Object {
            "background": "aliceblue",
            "height": 240,
            "objectFit": "cover",
            "width": "max(100%, 360px)",
          }
        }
        url="/plugins/kibanaReact/assets/elastic_agent_card.svg"
      />
    }
    paddingSize="l"
    title={
      <EuiScreenReaderOnly>
        <span>
          Add Elastic Agent
        </span>
      </EuiScreenReaderOnly>
    }
  />
</RedirectAppLinks>
`;
